create groceries page with looping

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>Groceries List</h1>
-    <form>
+    <form id="hide">
       <label for="grocery1">Fruit</label>
       <input id="grocery1" type="text">
       <label for="grocery2">Vegetable</label>
